--- a/historia.html
+++ b/historia.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MusicAll - Piano digital</title>
+    <title>MusicAll - História</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
-    <link rel="stylesheet" href="/css/piano.css" />
     <link rel="stylesheet" href="/css/main.css" />
 </head>
 
-<body>
-    <div class="container-fluid ">
+<body class="font">
+    <div class="container-fluid">
         <nav id="nav" class="navbar navbar-expand-lg navbar-dark fixed-top purple-clear">
             <div class="container">
                 <a class="navbar-brand" href="index.html">MusicAll</a>
@@ -28,7 +27,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item active dropdown">
                             <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Música
@@ -39,12 +38,11 @@
                                 <a class="dropdown-item text-light" href="instrumentos.html">Instrumentos</a>
                             </div>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="piano.html">Piano digital <span
-                                    class="sr-only">(current)</span></a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="piano.html">Piano digital</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="escolas.html">Escolas</a>
+                            <a class="nav-link" href="escolas.html">Escolas <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="lojas.html">Lojas</a>
@@ -61,88 +59,54 @@
 
     </div>
 
-    <section class="main-piano">
-
-        <div class="wrap container">
-            <!--Controls-->
-            <div class="controls-container">
-                <div class="speakers"></div>
-                <div class="controls">
-                    <div class="input-container">
-                        <h2>Keyboard 5000</h2>
-                        <div class="input-buttons">
-                            <div class="demo-buttons">
-                                <div>
-                                    <button class="demo-button demo1"></button>
-                                    <div>1</div>
-                                </div>
-                                <div>
-                                    <button class="demo-button demo2"></button>
-                                    <div>2</div>
-                                </div>
-                                <div>
-                                    <button class="demo-button demo3"></button>
-                                    <div>3</div>
-                                </div>
-                                <div>
-                                    <button class="demo-button demo4"></button>
-                                    <div>4</div>
-                                </div>
-                                <div>
-                                    <button class="help"></button>
-                                    <div>Teclas</div>
-                                </div>
-                            </div>
-                            <div class="demo-label">Demos</div>
-                        </div>
-                    </div>
-                    <div class="inputs">
-                        <input type="range" class="volume" step="0.1" min="0" max="1"></input>
-                        <input type="range" class="tempo" min="2" max="8"></input>
-                    </div>
-                    <div class="input-labels">
-                        <div>Volume</div>
-                        <div>Velocidade</div>
-                    </div>
-                </div>
-                <div class="speakers"></div>
-            </div>
-
-            <div class="keyboard container">
-                <div data-note="c4" data-key="81" class="key white oct">q</div>
-                <div data-note="db4" data-key="50" class="key black black1 oct">2</div>
-                <div data-note="d4" data-key="87" class="key white oct">w</div>
-                <div data-note="eb4" data-key="51" class="key black black2 oct">3</div>
-                <div data-note="e4" data-key="69" class="key white oct">e</div>
-                <div data-note="f4" data-key="82" class="key white oct">r</div>
-                <div data-note="gb4" data-key="53" class="key black black3 oct">5</div>
-                <div data-note="g4" data-key="84" class="key white oct">t</div>
-                <div data-note="ab4" data-key="54" class="key black black4 oct">6</div>
-                <div data-note="a4" data-key="89" class="key white oct">y</div>
-                <div data-note="bb4" data-key="55" class="key black black5 oct">7</div>
-                <div data-note="b4" data-key="85" class="key white oct">u</div>
-                <div data-note="c5" data-key="88" class="key white">x</div>
-                <div data-note="db5" data-key="68" class="key black black6">d</div>
-                <div data-note="d5" data-key="67" class="key white">c</div>
-                <div data-note="eb5" data-key="70" class="key black black7">f</div>
-                <div data-note="e5" data-key="86" class="key white">v</div>
-                <div data-note="f5" data-key="66" class="key white">b</div>
-                <div data-note="gb5" data-key="72" class="key black black8">h</div>
-                <div data-note="g5" data-key="78" class="key white">n</div>
-                <div data-note="ab5" data-key="74" class="key black black9">j</div>
-                <div data-note="a5" data-key="77" class="key white">m</div>
-                <div data-note="bb5" data-key="75" class="key black black10">k</div>
-                <div data-note="b5" data-key="188" class="key white">,</div>
-                <div data-note="c6" data-key="190" class="key white">.</div>
-            </div>
-            <h3 class="text-light ml-5 mt-5">Músicas demo</h3>
-            <p class="demo-button demo1 text-light ml-5 mt-2">1 - Radiohead - No surprises</p>
-            <p class="text-light ml-5">2 - Life on Mars - David Bowie</p>
-            <p class="text-light ml-5">3 - Für Elise - Ludwig van Beethoven </p>
-            <p class="text-light ml-5">4 - The Entertainer - Scott Joplin </p>
-
+    <section class="main-navigation mt-5">
+        <div class="container">
+            <h1>História</h1>
+            <p>Flautas ou tambores? Antes da teoria da evolução de Charles Darwin, aceitava-se
+                como resposta a versão oferecida pela mitologia(principalmente a mitologia grega) para o
+                surgimento dos instrumentos. Já era alguma coisa.</p>
+            <p>Muito embora haja estudos sobre a origem dos instrumentos desde a Idade Média, foi
+                somente depois de Darwin, isto é, a partir do século XIX, que passaram a figurar na
+                literatura da musicologia trabalhos com mais embasamento científico a respeito da préhistória dos
+                instrumentos. Havia divergências quanto à ordem em que teriam surgido os
+                três grupos maiores de instrumentos, quais sejam, os sopros, as percussões e as cordas.
+                Sobretudo com relação aos dois primeiros.
+            </p>
+            <p>Se havia autores no passado (recente) que acreditavam serem os tambores os
+                primeiros, em geral por considerarem os sons de percussão como os mais primitivos, hoje
+                em dia há os que -- apoiados em dados científicos mais confiáveis -- afirmam que as
+                flautas é que foram as primeiras.
+            </p>
+            <p>Em trabalhos de escavação arqueológica feitos nos séculos XX e XXI foram
+                encontradas as flautas mais antigas de que se tem notícia. No ano de 2009, uma equipe
+                de pesquisadores da Universidade de Tubingen, na Alemanha, publicou um trabalho
+                sobre a descoberta de três flautas datadas de 35.000 anos na caverna Hohle Fels
+                localizada no sudoeste da Alemanha. Consta que a mais conservada das três fora
+                construída a partir de um osso (da asa) de abutre. Como não se tem notícia de tambores
+                mais antigos, a pesquisa mostra que os sons eólicos feitos pela mão do homem podem
+                ter surgido primeiro. Parece não haver divergências, contudo, quanto ao surgimento dos
+                instrumentos de corda em uma terceira etapa, isto é, eles teriam surgido depois das
+                flautas e dos tambores. As chamadas liras de Ur, consideradas como os mais antigos
+                instrumentos de cordas, foram construídas na Mesopotâmia antiga há cerca de 4500
+                anos. Há nessa 'Idade da Corda', em que se incluiam principalmente a harpa e a lira, um
+                fato importante a ser lembrado. Trata-se do seguinte: a antiquíssima arma (de caça, etc.)
+                conhecida por 'arco e flecha' é um ancestral imediato da harpa, dada a equivalência
+                estrutural primitiva que há entre a sua arquitetura e a da harpa. A potência do arco era
+                medida pelos antigos a partir da altura do som produzido pela corda quando dedilhada
+            </p>
+            <p>Assim como o arco e flecha, há outros utensílios não musicais que contêm cordas
+                distendidas -capazes, portanto, de emitir sons- como é o caso da raquete de tênis. Graças
+                a isto, o tenista consegue avaliar se a potência da raquete está no seu valor habitual. Isto
+                é, a partir da altura do som que se produz com a vibração das cordas (em resultado do
+                choque da raquete com a bola em jogo), ele saberá dizer se o encordoamento encontrase na tensão nominal
+                que ele usa.
+            </p>
+            <p>
+                Depois, muito depois da harpa e da lira, é que viriam a cítara, o alaúde, seguidos de
+                uma infinidade de outros instrumentos, todos eles descendentes desses ancestrais
+                básicos
+            </p>
         </div>
-
     </section>
 
     <footer class="container-fluid">
@@ -190,7 +154,6 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
         </script>
     <script src="js/app.js"></script>
-    <script src="js/piano.js"></script>
 </body>
 
 </html>
