--- a/lojas.html
+++ b/lojas.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MusicAll - Piano digital</title>
+    <title>MusicAll - Lojas</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
-    <link rel="stylesheet" href="/css/piano.css" />
     <link rel="stylesheet" href="/css/main.css" />
 </head>
 
-<body>
-    <div class="container-fluid ">
+<body class="font">
+    <div class="container-fluid">
         <nav id="nav" class="navbar navbar-expand-lg navbar-dark fixed-top purple-clear">
             <div class="container">
                 <a class="navbar-brand" href="index.html">MusicAll</a>
@@ -39,14 +38,13 @@
                                 <a class="dropdown-item text-light" href="instrumentos.html">Instrumentos</a>
                             </div>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="piano.html">Piano digital</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="escolas.html">Escolas <span class="sr-only">(current)</span></a>
+                        </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="piano.html">Piano digital <span
-                                    class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="escolas.html">Escolas</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="lojas.html">Lojas</a>
                         </li>
                     </ul>
@@ -61,88 +59,10 @@
 
     </div>
 
-    <section class="main-piano">
-
-        <div class="wrap container">
-            <!--Controls-->
-            <div class="controls-container">
-                <div class="speakers"></div>
-                <div class="controls">
-                    <div class="input-container">
-                        <h2>Keyboard 5000</h2>
-                        <div class="input-buttons">
-                            <div class="demo-buttons">
-                                <div>
-                                    <button class="demo-button demo1"></button>
-                                    <div>1</div>
-                                </div>
-                                <div>
-                                    <button class="demo-button demo2"></button>
-                                    <div>2</div>
-                                </div>
-                                <div>
-                                    <button class="demo-button demo3"></button>
-                                    <div>3</div>
-                                </div>
-                                <div>
-                                    <button class="demo-button demo4"></button>
-                                    <div>4</div>
-                                </div>
-                                <div>
-                                    <button class="help"></button>
-                                    <div>Teclas</div>
-                                </div>
-                            </div>
-                            <div class="demo-label">Demos</div>
-                        </div>
-                    </div>
-                    <div class="inputs">
-                        <input type="range" class="volume" step="0.1" min="0" max="1"></input>
-                        <input type="range" class="tempo" min="2" max="8"></input>
-                    </div>
-                    <div class="input-labels">
-                        <div>Volume</div>
-                        <div>Velocidade</div>
-                    </div>
-                </div>
-                <div class="speakers"></div>
-            </div>
-
-            <div class="keyboard container">
-                <div data-note="c4" data-key="81" class="key white oct">q</div>
-                <div data-note="db4" data-key="50" class="key black black1 oct">2</div>
-                <div data-note="d4" data-key="87" class="key white oct">w</div>
-                <div data-note="eb4" data-key="51" class="key black black2 oct">3</div>
-                <div data-note="e4" data-key="69" class="key white oct">e</div>
-                <div data-note="f4" data-key="82" class="key white oct">r</div>
-                <div data-note="gb4" data-key="53" class="key black black3 oct">5</div>
-                <div data-note="g4" data-key="84" class="key white oct">t</div>
-                <div data-note="ab4" data-key="54" class="key black black4 oct">6</div>
-                <div data-note="a4" data-key="89" class="key white oct">y</div>
-                <div data-note="bb4" data-key="55" class="key black black5 oct">7</div>
-                <div data-note="b4" data-key="85" class="key white oct">u</div>
-                <div data-note="c5" data-key="88" class="key white">x</div>
-                <div data-note="db5" data-key="68" class="key black black6">d</div>
-                <div data-note="d5" data-key="67" class="key white">c</div>
-                <div data-note="eb5" data-key="70" class="key black black7">f</div>
-                <div data-note="e5" data-key="86" class="key white">v</div>
-                <div data-note="f5" data-key="66" class="key white">b</div>
-                <div data-note="gb5" data-key="72" class="key black black8">h</div>
-                <div data-note="g5" data-key="78" class="key white">n</div>
-                <div data-note="ab5" data-key="74" class="key black black9">j</div>
-                <div data-note="a5" data-key="77" class="key white">m</div>
-                <div data-note="bb5" data-key="75" class="key black black10">k</div>
-                <div data-note="b5" data-key="188" class="key white">,</div>
-                <div data-note="c6" data-key="190" class="key white">.</div>
-            </div>
-            <h3 class="text-light ml-5 mt-5">Músicas demo</h3>
-            <p class="demo-button demo1 text-light ml-5 mt-2">1 - Radiohead - No surprises</p>
-            <p class="text-light ml-5">2 - Life on Mars - David Bowie</p>
-            <p class="text-light ml-5">3 - Für Elise - Ludwig van Beethoven </p>
-            <p class="text-light ml-5">4 - The Entertainer - Scott Joplin </p>
-
+    <section class="main-navigation mt-5">
+        <div class="container">
+            <h1>Lojas</h1>
         </div>
-
     </section>
 
     <footer class="container-fluid">
@@ -190,7 +110,6 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
         </script>
     <script src="js/app.js"></script>
-    <script src="js/piano.js"></script>
 </body>
 
 </html>
