--- a/estilos.html
+++ b/estilos.html
@@ -61,7 +61,7 @@
 
     <section class="main-navigation mt-5">
         <div class="container">
-            <h1>Estilos musicais</h1>
+            <h1 class="text-purple font-weight-bold">Estilos musicais</h1>
             <select id="select-style" name="select-style" class="form-control">
                 <option value=" none">Selecione ume estilo musical</option>
                 <option value="classical">Classica</option>
