--- a/historia.html
+++ b/historia.html
@@ -61,7 +61,7 @@
 
     <section class="main-navigation mt-5">
         <div class="container">
-            <h1>História</h1>
+            <h1 class="text-purple font-weight-bold">História</h1>
             <p>Flautas ou tambores? Antes da teoria da evolução de Charles Darwin, aceitava-se
                 como resposta a versão oferecida pela mitologia(principalmente a mitologia grega) para o
                 surgimento dos instrumentos. Já era alguma coisa.</p>
