--- a/piano.html
+++ b/piano.html
@@ -61,7 +61,7 @@
 
     </div>
 
-    <section class="main-piano">
+    <section class="main-navigation">
 
         <div class="wrap container">
             <!--Controls-->
