--- a/escolas.html
+++ b/escolas.html
@@ -61,7 +61,121 @@
 
     <section class="main-navigation mt-5">
         <div class="container">
-            <h1>Escolas</h1>
+            <h1 class="text-purple font-weight-bold">Encontra uma escola perto de você!</h1>
+            <form>
+                <select id="select-style" name="select-style" class="form-control mt-3">
+                    <option value=" none">Selecione ume estilo musical</option>
+                    <option value="classical">Classica</option>
+                    <option value="funk">Funk</option>
+                    <option value="samba">Samba</option>
+                </select>
+            </form>
+            <div class="row mt-3">
+                <div class="col-lg-4">
+                    <div class="card card-item" style="width: 100%;">
+                        <img src="img/escola.jpg" class="card-img-top" alt="Escola de música">
+                        <div class="card-body">
+                            <h3 class="card-title">Mozzart school 1</h3>
+                            <h5>
+                                <b>
+                                    <i class="fas fa-map-marker-alt text-purple"></i> Curitiba - PR <br>
+                                    <i class="fas fa-phone-square-alt text-purple"></i> (41) 5555-5555</i>
+                                </b>
+                            </h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+                                provident architecto quas labore recusandae.</p>
+                            <a href="#" class="btn btn-default">Visitar site</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card card-item" style="width: 100%;">
+                        <img src="img/escola.jpg" class="card-img-top" alt="Escola de música">
+                        <div class="card-body">
+                            <h3 class="card-title">Mozzart school 2</h3>
+                            <h5>
+                                <b>
+                                    <i class="fas fa-map-marker-alt text-purple"></i> Curitiba - PR <br>
+                                    <i class="fas fa-phone-square-alt text-purple"></i> (41) 5555-5555</i>
+                                </b>
+                            </h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+                                provident architecto quas labore recusandae.</p>
+                            <a href="#" class="btn btn-default">Visitar site</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card card-item" style="width: 100%;">
+                        <img src="img/escola.jpg" class="card-img-top" alt="Escola de música">
+                        <div class="card-body">
+                            <h3 class="card-title">Mozzart school 3</h3>
+                            <h5>
+                                <b>
+                                    <i class="fas fa-map-marker-alt text-purple"></i> Curitiba - PR <br>
+                                    <i class="fas fa-phone-square-alt text-purple"></i> (41) 5555-5555</i>
+                                </b>
+                            </h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+                                provident architecto quas labore recusandae.</p>
+                            <a href="#" class="btn btn-default">Visitar site</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-lg-4">
+                    <div class="card card-item" style="width: 100%;">
+                        <img src="img/escola.jpg" class="card-img-top" alt="Escola de música">
+                        <div class="card-body">
+                            <h3 class="card-title">Mozzart school 1</h3>
+                            <h5>
+                                <b>
+                                    <i class="fas fa-map-marker-alt text-purple"></i> Curitiba - PR <br>
+                                    <i class="fas fa-phone-square-alt text-purple"></i> (41) 5555-5555</i>
+                                </b>
+                            </h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+                                provident architecto quas labore recusandae.</p>
+                            <a href="#" class="btn btn-default">Visitar site</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card card-item" style="width: 100%;">
+                        <img src="img/escola.jpg" class="card-img-top" alt="Escola de música">
+                        <div class="card-body">
+                            <h3 class="card-title">Mozzart school 2</h3>
+                            <h5>
+                                <b>
+                                    <i class="fas fa-map-marker-alt text-purple"></i> Curitiba - PR <br>
+                                    <i class="fas fa-phone-square-alt text-purple"></i> (41) 5555-5555</i>
+                                </b>
+                            </h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+                                provident architecto quas labore recusandae.</p>
+                            <a href="#" class="btn btn-default">Visitar site</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card card-item" style="width: 100%;">
+                        <img src="img/escola.jpg" class="card-img-top" alt="Escola de música">
+                        <div class="card-body">
+                            <h3 class="card-title">Mozzart school 3</h3>
+                            <h5>
+                                <b>
+                                    <i class="fas fa-map-marker-alt text-purple"></i> Curitiba - PR <br>
+                                    <i class="fas fa-phone-square-alt text-purple"></i> (41) 5555-5555</i>
+                                </b>
+                            </h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+                                provident architecto quas labore recusandae.</p>
+                            <a href="#" class="btn btn-default">Visitar site</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
