--- a/instrumentos.html
+++ b/instrumentos.html
@@ -61,7 +61,7 @@
 
     <section class="main-navigation mt-5">
         <div class="container">
-            <h1>Instrumentos musicais</h1>
+            <h1 class="text-purple font-weight-bold">Instrumentos musicais</h1>
         </div>
     </section>
 
