--- a/piano.html
+++ b/piano.html
@@ -72,6 +72,7 @@
                         <h2>Keyboard 5000</h2>
                         <div class="input-buttons">
                             <div class="demo-buttons">
+                                <!--
                                 <div>
                                     <button class="demo-button demo1"></button>
                                     <div>1</div>
@@ -88,12 +89,13 @@
                                     <button class="demo-button demo4"></button>
                                     <div>4</div>
                                 </div>
+                            -->
                                 <div>
                                     <button class="help"></button>
-                                    <div>Teclas</div>
+                                    <div>Mostrar teclas</div>
                                 </div>
                             </div>
-                            <div class="demo-label">Demos</div>
+                            <!--<div class="demo-label">Demos</div>-->
                         </div>
                     </div>
                     <div class="inputs">
@@ -135,11 +137,15 @@
                 <div data-note="b5" data-key="188" class="key white">,</div>
                 <div data-note="c6" data-key="190" class="key white">.</div>
             </div>
-            <h3 class="text-light ml-5 mt-5">Músicas demo</h3>
-            <p class="demo-button demo1 text-light ml-5 mt-2">1 - Radiohead - No surprises</p>
-            <p class="text-light ml-5">2 - Life on Mars - David Bowie</p>
-            <p class="text-light ml-5">3 - Für Elise - Ludwig van Beethoven </p>
-            <p class="text-light ml-5">4 - The Entertainer - Scott Joplin </p>
+            <h3 class="text-light ml-2 mt-2 text-center">Músicas demo - Clique para ouvir</h3>
+            <p class=" demo-button demo1 text-light mt-2"><i class="fas fa-headphones"></i> Radiohead - No surprises
+            </p>
+            <p class="demo-button demo2 text-light "><i class="fas fa-headphones"></i> Life on Mars - David Bowie
+            </p>
+            <p class="demo-button demo3 text-light "><i class="fas fa-headphones"></i> Für Elise - Ludwig van
+                Beethoven </p>
+            <p class="demo-button demo4 text-light "><i class="fas fa-headphones"></i> The Entertainer - Scott
+                Joplin </p>
 
         </div>
 
